[package]
name = "bench"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {path = "../polars"}
arrow = {path = "../vendor/rust_arrow/arrow", package="polars_arrow_rvsry99dx", version="0.17.1", features = ["packed_simd"]}
