[package]
name = "bench"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {path = "../polars"}
arrow = {version = "1.0.0", default_features = false}
