[package]
name = "polars"
version = "0.0.1"
authors = ["Cory Grinstead"]
documentation = "https://pola-rs.github.io/polars-book/"
edition = "2021"
homepage = "https://github.com/pola-rs/polars"
license = "MIT"
repository = "https://github.com/pola-rs/polars"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]

[dependencies]
ahash = "0.7"
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.79"}
js-sys = "0.3.56"
thiserror = "1.0.20"
paste = "1.0.6"
futures-channel = "0.3.21"
wasm-bindgen-futures = "0.4.29"
wasm-bindgen-rayon = { version = "1.0" }
rayon = "1.5"
spmc = "0.3.0"

[dependencies.polars]
features = [
  "abs",
  # "diagonal_concat",
  "diff",
  "dot_diagram",
  "dtype-categorical",
  "dtype-full",
  # "extract_jsonpath",
  # "horizontal_concat",
  "list",
  "log",
  "mode",
  "moment",
  "object",
  "pct_change",
  "performant",
  "json",
  "csv-file",
  # "private",
  # "fmt",
  "product",
  "rank",
  "reinterpret",
  # "rolling_window",
  "round_series",
  "rows",
  # "temporal",
  "strings",
  "true_div",
  "browser",
  # "browser-parquet"
]
default-features = false
path =  "../polars"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'console',
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'WorkerOptions',
  'WorkerGlobalScope',
  'WorkerType',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]


[workspace]
