[package]
name = "polars-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pola-rs/polars"
description = "CLI interface for running SQL queries via Polars"

[[bin]]
name = "polars"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
panic = "abort"

[features]
highlight = ["nu-ansi-term"]
default = ["highlight", "parquet", "json", "ipc"]
parquet = ["polars/parquet"]
json = ["polars/json"]
ipc = ["polars/ipc"]

[dependencies]
atty = { version = "0.2" }
ciborium = "0.2.0"
clap = { version = "4.2.2", features = ["derive", "cargo"] }
nu-ansi-term = { version = "0.47.0", optional = true }
once_cell.workspace = true
polars = { version = "0.31.1", path = "../polars", features = ["lazy", "sql", "dtype-full", "serde-lazy"] }
reedline = { version = "0.21.0" }
serde = { version = "1.0.160", features = ["derive"] }
sqlparser = "0.34"
tmp_env = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5.0", features = ["disable_initial_exec_tls"] }
