[package]
name = "polars-cli"
version = "0.3.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "CLI interface for running SQL queries via Polars"

[[bin]]
name = "polars"
path = "src/main.rs"

[dependencies]
polars = { version = "0.31.1", path = "../crates/polars", features = ["lazy", "sql", "dtype-full", "serde-lazy"] }

atty = { version = "0.2" }
ciborium = { workspace = true }
clap = { version = "4.2.2", features = ["derive", "cargo"] }
nu-ansi-term = { version = "0.49.0", optional = true }
once_cell = { workspace = true }
reedline = { git = "https://github.com/nushell/reedline", rev = "e7ee24a2b01d041feefb5eb58ba2377a20412f94" }
serde = { workspace = true, features = ["derive"] }
sqlparser = { workspace = true }
tmp_env = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5.0", features = ["disable_initial_exec_tls"] }

[features]
highlight = ["nu-ansi-term"]
default = ["highlight", "parquet", "json", "ipc"]
parquet = ["polars/parquet"]
json = ["polars/json"]
ipc = ["polars/ipc"]
