[package]
name = "nodejs-polars"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.7"
bincode = "1.3"

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.2.0", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2.2.0"
polars-core = { path = "../polars/polars-core", default-features = false }
thiserror = "1.0.20"
serde_json = { version = "1" }


[dependencies.polars]
features = [
  "json", 
  "dynamic_groupby",
  "zip_with",
  "simd",
  "lazy",
  "strings",
  "temporal",
  "random",
  "object",
  "csv-file",
  "fmt",
  "performant",
  "dtype-full",
  "rows",
  "private",
  "round_series",
  "is_in",
  "is_first",
  "asof_join",
  "cross_join",
  "dot_product",
  "concat_str",
  "row_hash",
  "reinterpret",
  "decompress-fast",
  "mode",
  "extract_jsonpath",
  "lazy_regex",
  "cum_agg",
  "rolling_window",
  "repeat_by",
  "interpolate",
  "list",
  "ewma",
  "rank",
  "diff",
  "pct_change",
  "moment",
  "arange",
  "true_div",
  "dtype-categorical",
  "diagonal_concat",
  "horizontal_concat",
  "abs",
  "dot_diagram",
  "dataframe_arithmetic",
  "json",
  "string_encoding",
  "product",
  "ndarray",
  "series_from_anyvalue",
  "unique_counts",
  "log",
  "serde-lazy",
  "partition_by",
  "semi_anti_join",
  "parquet",
  "ipc"
  # "avro"
]
path = "../polars"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
codegen-units = 1
lto = "fat"

[workspace]
