[package]
name = "polars-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
cli = ["csv", "polars-lazy/fmt"]
csv = ["polars-lazy/csv-file"]
parquet = ["polars-lazy/parquet", "polars-lazy/dtype-binary"]

[dependencies]
polars-arrow = { path = "../polars/polars-arrow", features = ["like"] }
polars-lazy = { path = "../polars/polars-lazy", features = ["compile"] }
polars-plan = { path = "../polars/polars-lazy/polars-plan", features = ["compile"] }
serde = "1"
serde_json = { version = "1" }
sqlparser = { version = "0.19" }

[dependencies.polars]
path = "../polars"
default-features = false
features = [
  "lazy",
  "cross_join",
  "strings",
]
